--- a/web-player/index.html
+++ b/web-player/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>meWATCH SG Live | Web Player</title>
+    <title>NetTV Live | Web Player</title>
     <meta name="twitter:image" content="https://mewatchsg.samsam123.name.my/web-player/assets/img/mewatch.png">
     <meta name="twitter:title" content="meWATCH SG Live | Web Player">
     <meta name="description" content="Watch various channels from meWATCH SG via this web player.">
@@ -21,9 +21,9 @@
     <section class="py-4 py-xl-5">
         <div class="container">
             <div class="text-center p-4 p-lg-5">
-                <h1 class="fw-bold mb-4">meWATCH SG Live | Web Player<br></h1>
-                <p class="fw-bold text-primary mb-2">Powered by Sam Sam</p>
-                <p>This Web Player only available in Google Chrome / Microsoft Edge on Windows / Android / macOS</p><a class="btn btn-primary fs-5 me-2 py-2 px-4" role="button" href="https://github.com/samleong123/mewatchsg">GitHub</a>
+                <h1 class="fw-bold mb-4">NetTV Live | Web Player<br></h1>
+                <p class="fw-bold text-primary mb-2">Powered by ThiHaZaw</p>
+                <p>This Web Player only available in Google Chrome TV/ Smart TV/ Microsoft Edge on Windows TV/ Android TV</p>
                 <div class="modal fade" role="dialog" tabindex="-1" id="unsupported">
                     <div class="modal-dialog" role="document">
                         <div class="modal-content">
@@ -31,7 +31,7 @@
                                 <h4 class="modal-title">Device not compatible<br></h4><button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
-                                <p>Our apologies, but this web player is only available in Google Chrome / Microsoft Edge on Windows / Android / macOS.</p>
+                                <p>Our apologies, but This Web Player only available in Google Chrome TV/ Smart TV/ Microsoft Edge on Windows TV/ Android TV</p>
                             </div>
                             <div class="modal-footer"><button class="btn btn-light" type="button" data-bs-dismiss="modal" onclick="window.close();">Close</button></div>
                         </div>
@@ -42,7 +42,7 @@
         <div class="container py-4 py-xl-5">
             <div class="row mb-5">
                 <div class="col-md-8 col-xl-6 text-center mx-auto">
-                    <p class="w-lg-50"><strong>Choose your favourite channels below</strong></p><select id="selectchannels" onchange="newSrc();">
+                    <p class="w-lg-50"><strong>Choose TV Channels</strong></p><select id="selectchannels" onchange="newSrc();">
                         <option value="./ch/channel5.html" selected="">Channel 5</option>
                         <option value="./ch/channel8.html">Channel 8 / 8 频道</option>
                         <option value="./ch/channelu.html">Channel U / U 频道</option>
